node-express/deploy/tanzu/.tanzu/config/httproute-node-express.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/node-express
  name: node-express-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: node-express
  rules:
  - backendRefs:
    - kind: Service
      name: node-express
      port: 3000
